# cliide

./: .gitignore  AI_FEATURES.md  CHAT_USAGE.md  CHECK_LOG.md  CONTRIBUTING.md  DEBUG_RUN.md  DEVELOPMENT.md  IMPLEMENTATION.md  LICENSE  PHASE2_COMPLETE.md  PHASE2_SUMMARY.txt  PROJECT_STRUCTURE.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TOOLS_README.md  TROUBLESHOOTING.md  config.example.toml  install_lsp_servers.sh  pyproject.toml  summary.md  test_ai.py  test_app.py  test_basic.py  test_chat_debug.py  test_chat_standalone.py  test_event_flow.py  test_simple_event.py  test_sync_event.py
assets/: .gitkeep
cliide/: __init__.py  __main__.py
cliide/ai/: agent.py  checkpoint.py  code_actions.py  context_builder.py  diagnostics_feedback.py  event_bus.py  git_assist.py  inline_suggest.py  memory.py  pattern_analyzer.py  prompt_manager.py  sub_agent.py  token_counter.py  tool_worker.py  vllm_client.py
cliide/ai/tools/: __init__.py  analysis.py  base.py  filesystem.py  git.py  memory_tools.py  project.py  rules.py  safety.py  search.py  shell.py  testing.py
cliide/core/: agent_mode.py  app.py  config.py  events.py  file_watcher.py  recent_projects.py  session.py
cliide/editor/: formatting.py
cliide/lsp/: __init__.py  client.py  manager.py  protocol.py
cliide/lsp/servers/: __init__.py
cliide/mcp/: __init__.py  client.py  manager.py  protocol.py  tools.py
cliide/mcp/transport/: __init__.py  base.py  stdio.py
cliide/themes/: __init__.py
cliide/ui/: agent_status.py  chat.py  chat_tabs.py  command_palette.py  completion_menu.py  dialogs.py  diff_view.py  directory_browser.py  editor.py  file_picker.py  file_tree.py  file_tree_actions.py  find_replace.py  loading.py  mode_indicator.py  problems_panel.py  project_picker.py  project_search.py  references_panel.py  rename_panel.py  settings.py  shortcuts.py  splitter.py  statusbar.py  symbol_search.py  tab_bar.py  terminal.py  tool_confirm.py  tooltip.py
cliide/utils/: audit_log.py  logger.py
