[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cliide"
version = "0.1.0"
description = "AI-first CLI IDE powered by local VLLM models"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "cliide contributors" }
]
keywords = [
    "cli",
    "ide",
    "ai",
    "vllm",
    "ollama",
    "llm",
    "code-editor",
    "tui",
    "terminal",
    "textual",
    "copilot",
    "coding-assistant",
    "ai-agent",
    "local-llm",
    "privacy",
    "developer-tools",
    "code-completion",
    "lsp",
    "syntax-highlighting",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Editors",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Typing :: Typed",
]

dependencies = [
    "textual>=0.50.0",
    "rich>=13.7.0",
    "openai>=1.12.0",  # For VLLM OpenAI-compatible API
    "pygls>=1.3.0",
    "lsprotocol>=2023.0.0",  # LSP protocol types
    "tree-sitter>=0.21.0",
    "tree-sitter-languages>=1.10.2",
    "aiofiles>=23.2.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "watchdog>=4.0.0",
    "asyncio>=3.4.3",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
    "textual-dev>=1.4.0",  # For live debugging
]

[project.scripts]
cliide = "cliide.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["cliide"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tree_sitter.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pygls.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=cliide",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"
